PluginDocumentParser uses incorrect syntax for background color https://bugs.webkit.org/show_bug.cgi?id=69694

Reviewed by Adam Barth.

Source/WebCore:

* html/PluginDocument.cpp:
(WebCore::PluginDocumentParser::createDocumentStructure):

LayoutTests:

* platform/mac/plugins/iframe-plugin-bgcolor-expected.txt: Added
* plugins/iframe-plugin-bgcolor.html: Added.
* plugins/iframe-plugin-bgcolor-expected.png: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@97103 bbb929c8-8fbe-4397-9dbb-9b2b20218538